[gd_scene load_steps=3 format=3 uid="uid://bsdxgq8pybvl4"]

[ext_resource type="Script" path="res://Langdocs/prog_58b.gd" id="1_bofpi"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="2_pwlki"]

[node name="prog58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bofpi")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 44.0
offset_right = 149.0
offset_bottom = 118.0
theme = ExtResource("2_pwlki")
text = "a:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 43.0
offset_right = 521.0
offset_bottom = 122.0
theme = ExtResource("2_pwlki")
text = "b:"
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 47.0
offset_right = 861.0
offset_bottom = 126.0
theme = ExtResource("2_pwlki")
text = "c:"
vertical_alignment = 1

[node name="txta" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 35.0
offset_right = 346.0
offset_bottom = 115.0
theme = ExtResource("2_pwlki")

[node name="txtb" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 36.0
offset_right = 702.0
offset_bottom = 116.0
theme = ExtResource("2_pwlki")

[node name="txtc" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 36.0
offset_right = 1038.0
offset_bottom = 116.0
theme = ExtResource("2_pwlki")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 139.0
offset_right = 934.0
offset_bottom = 224.0
theme = ExtResource("2_pwlki")
text = "ax^2 + bx + c"

[node name="lblRoots" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 250.0
offset_right = 588.0
offset_bottom = 335.0
theme = ExtResource("2_pwlki")
text = "Roots:"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 471.0
offset_right = 431.0
offset_bottom = 553.0
theme = ExtResource("2_pwlki")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 471.0
offset_right = 702.0
offset_bottom = 553.0
theme = ExtResource("2_pwlki")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 471.0
offset_right = 980.0
offset_bottom = 553.0
theme = ExtResource("2_pwlki")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
